chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f SonarQube.yml
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f SonarQube.yml
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/sonarnet: "true"
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: POSTGRES_PASSWORD
              value: sonar
            - name: POSTGRES_USER
              value: sonar
            - name: SONARQUBE_DATABASE_PORT_NUMBER
              value: "5432"
          image: postgres
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql
              name: postgresql
            - mountPath: /var/lib/postgresql/data
              name: postgresql-data
      restartPolicy: Always
      volumes:
        - name: postgresql
          persistentVolumeClaim:
            claimName: postgresql
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql-data
status: {}
